Bug 417952 - Open Containing Folder doesn't highlight/select file in Nautilus. r=karlt

If the File Manager DBus Interface[1] is present, use it to
launch file manager and select the file, otherwise fallback to
existing code for backwards compatibility.

[1] http://www.freedesktop.org/wiki/Specifications/file-manager-interface/